added collection to .crashrc, minor changes

--- a/.crashrc
+++ b/.crashrc
@@ -3,4 +3,6 @@ bt  >> hotkdump.out
 log | grep -vi audit >> hotkdump.out
 !echo "\n" << hotkdump.out
 kmem -i >> hotkdump.out
+dev -d >> hotkdump.out
+ps -m | grep UN | tail >> hotkdump.out
 quit
