argparse: make "-c/--casenum" optional
Fixes #22

Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Dependencies
         run: |
           if [[ "$EUID" -ne 0 ]]; then
-            SUDO_CMD="sudo"
+            SUDO_CMD="sudo -H"
           else
             SUDO_CMD=""
           fi
