ci: pin pip to 20.3.4
the latest release is causing issues in bionic.

Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,15 @@ isolated_build=true
 skipsdist = True
 
 [testenv]
+setenv =
+    # (mkg): The latest pip in these environments fail to clone
+    # ubuntu-dev-tools on Bionic with the following message:
+    # "error: Server does not allow request for unadvertised
+    # object b7f368591bd45b02523356071943d1223822d8db"
+    # Pinning the pip version meanwhile.
+    py36: VIRTUALENV_PIP=20.3.4
+    py37: VIRTUALENV_PIP=20.3.4
+    py38: VIRTUALENV_PIP=20.3.4
 description = run the test suite with pytest
 deps =
     -r{toxinidir}/test-requirements.txt
