--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,3 +51,36 @@ jobs:
         run: |
           echo "Environment" ${{ matrix.vars.toxenv }}
           tox -e "${{ matrix.vars.toxenv }}"
+  Test-Snap:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: |
+          if [[ "$EUID" -ne 0 ]]; then
+            SUDO_CMD="sudo -H"
+          else
+            SUDO_CMD=""
+          fi
+          $SUDO_CMD apt -y update
+          $SUDO_CMD apt -y install snapcraft sudo
+          $SUDO_CMD snap refresh lxd --channel=latest/stable
+      - name: Initialize LXD
+        run: |
+          sudo lxd init --auto
+          sudo usermod -aG lxd $USER
+          whoami
+          groups
+      - name: Build the snap
+        run: |
+          sudo -s -u ${USER} bash -c 'whoami && groups && snapcraft'
+      - name: Install the snap
+        run: |
+          sudo snap install ./hotkdump*.snap --dangerous
+      - name: Test the hotkdump command
+        run: |
+          # (mkg): We had to do this because there's no good way
+          # (that I'm aware of) getting the exit code when process
+          # substition is used.
+          hotkdump 2> >(grep "usage" || echo "fail") | grep -v "fail" 
+
