--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
 env_list = py{36,37,38,39,310,311,312}
 isolated_build=true
-skipsdist = True
+skipsdist = true
 
 [testenv]
+allowlist_externals =
+    py36: bash
 setenv =
     # (mkg): The latest pip in these environments fail to clone
     # ubuntu-dev-tools on Bionic with the following message:
@@ -14,7 +16,12 @@ setenv =
     py37: VIRTUALENV_PIP=20.3.4
     py38: VIRTUALENV_PIP=20.3.4
 description = run the test suite with pytest
-deps =
-    -r{toxinidir}/test-requirements.txt
+deps = 
+    # Note that this is awkwardly installs the package
+    # itself and not only [optional-dependencies.testing].
+    # see: https://github.com/pypa/pip/issues/11440
+    py37,py38,py39,py310,py311,py312: .[testing]
 commands =
+    py36: pip3 install toml
+    py36: bash -c "pip3 install $(python extras/py36-test-requirements.py)"
     pytest {posargs:tests}
