project: enable pylint
added a comprehensive configuration for pylint. made the following changes to fix pylint warnings:

- class names converted to CamelCase
- replaced filter() calls with list comprehensions
- renamed variable names that conflict with builtins
- defined variables for some magic constants

added pylint job to CI.

also made the following refactorings:

- the project now uses dataclasses. added dataclasses dependency for py3.6
- extras/py36-test-dependencies.py now lists regular dependencies as well.
- renamed extras/py36-test-dependencies.py to extras/py36-all-dependencies.py
- Added FolderRetentionManagerSettings dataclass for storing FolderRetentionManager settings.
- Added load_policies_from_settings() method to FolderRetentionManager, which automatically creates policies based on setting values.
- Added debug logs to FolderRetentionManager.execute_policies
- Replaced all f-strings with "%" formatting in log calls for lazy evaluation
- Added HotkdumpParameters dataclass.
- Hotkdump class is now constructed with HotkdumpParameters.
- Added encoding parameter to write open() calls
- Moved the Hotkdump workflow from main to class member run() function
. Moved main() method logic from hotkdump_impl.py to main.py
- Renamed hotkdump_impl.py to hotkdump.py
- Moved switch_cwd method from Hotkdump to utils

Fixes #62

Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,10 +56,15 @@ jobs:
           $SUDO_CMD apt -y install ${{ matrix.vars.aptpkg }}
           pip3 install tox ${{ matrix.vars.pipargs }}
         shell: bash
-      - name: Run unit tests ()
+      - name: Run unit tests
         run: |
           echo "Environment" ${{ matrix.toxenv }}
           tox -e "${{ matrix.toxenv }}"
+
+      - name: Run pylint
+        if: matrix.toxenv== 'py312'
+        run: |
+          tox -e pylint
   Test-Snap:
     runs-on: ubuntu-20.04
     steps:
