--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = py{36,37,38,39,310,311,312}
+env_list = py{36,37,38,39,310,311,312},pylint
 isolated_build=true
 skipsdist = true
 
@@ -20,8 +20,12 @@ deps =
     # Note that this is awkwardly installs the package
     # itself and not only [optional-dependencies.testing].
     # see: https://github.com/pypa/pip/issues/11440
-    py37,py38,py39,py310,py311,py312: .[testing]
+    py37,py38,py39,py310,py311,py312: .[testing] # Install & test dependencies
 commands =
     py36: pip3 install toml
-    py36: bash -c "pip3 install $(python extras/py36-test-requirements.py)"
-    pytest {posargs:tests}
+    py36: bash -c "pip3 install $(python extras/py36-all-requirements.py)"
+    pytest {posargs}
+
+[testenv:pylint]
+deps = pylint
+commands = pylint --recursive=y -v {toxinidir}/hotkdump
