crash_commands: move it to a jinja template
Added jinja2 3.0.3 dependency as it's the last version that
supports the python36

Closes: SET-940

Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 env_list = py{36,37,38,39,310,311,312},pylint
-isolated_build=true
 skipsdist = true
 
 [testenv]
@@ -20,12 +19,11 @@ deps =
     # Note that this is awkwardly installs the package
     # itself and not only [optional-dependencies.testing].
     # see: https://github.com/pypa/pip/issues/11440
-    py37,py38,py39,py310,py311,py312: .[testing] # Install & test dependencies
+    py37,py38,py39,py310,py311,py312,pylint: .[testing] # Install & test dependencies
 commands =
     py36: pip3 install toml
     py36: bash -c "pip3 install $(python extras/py36-all-requirements.py)"
     pytest {posargs}
 
 [testenv:pylint]
-deps = pylint
 commands = pylint --recursive=y -v {toxinidir}/hotkdump
