project: add ruff as additional checker
we're now also linting the test files too. made some changes to make
test files compliant with the pylint settings.

Closes SET-981

Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ testing = [
   "pytest>=7",
   "pytest-sugar",
   "pylint",
+  "ruff;python_version>'3.6'",
   # The below are ubuntu-dev-tools's dependencies but unfortunately
   # the requirements.txt file is not referred in setup.py so we have
   # to list them here
