--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
 [tox]
-env_list = py{36,37,38,39,310,311,312},pylint
+env_list = py{36,37,38,39,310,311,312},pylint,ruff
 skipsdist = true
 
 [testenv]
+unit_tests = {toxinidir}/tests/
+module_files =
+    {toxinidir}/hotkdump
 allowlist_externals =
     py36: bash
 setenv =
@@ -19,11 +22,20 @@ deps =
     # Note that this is awkwardly installs the package
     # itself and not only [optional-dependencies.testing].
     # see: https://github.com/pypa/pip/issues/11440
-    py37,py38,py39,py310,py311,py312,pylint: .[testing] # Install & test dependencies
+    py{36,37,38,39,310,311,312},pylint,ruff: .[testing] # Install & test dependencies
 commands =
     py36: pip3 install toml
     py36: bash -c "pip3 install $(python extras/py36-all-requirements.py)"
     pytest {posargs}
 
 [testenv:pylint]
-commands = pylint --recursive=y -v {toxinidir}/hotkdump
+commands =
+    pylint --recursive=y -v {posargs:{[testenv]module_files}}
+    # It's fine for unit tests to not have docstrings. Also, pytest does not like static test cases.
+    pylint --recursive=y -v {posargs:{[testenv]unit_tests}}  --disable=missing-function-docstring,missing-class-docstring,no-self-use
+
+[testenv:ruff]
+commands =
+    # ruff is not compatible with py36 atm.
+    py{37,38,39,310,311,312}: ruff check {posargs:{[testenv]module_files}}
+    py{37,38,39,310,311,312}: ruff check {posargs:{[testenv]unit_tests}}
