--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,6 +70,11 @@ jobs:
         if: matrix.toxenv== 'py312'
         run: |
           tox -e pylint
+
+      - name: Run ruff
+        if: matrix.toxenv== 'py312'
+        run: |
+          tox -e ruff
   Test-Snap:
     runs-on: ubuntu-20.04
     steps:
