project: automatic formatting&format checking with ruff
format existing code with ruff, also add "ruff-format" and
"ruff-format-check" targets.

Limit "ruff*" tox targets to >=py37 since ruff is not available
for py36.

Add "ruff-format-check" to CI pipeline.

Re-enable isolated_build for tox.

Closes: SET-982
Signed-off-by: Mustafa Kemal Gilor <mustafa.gilor@canonical.com>

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,10 +71,15 @@ jobs:
         run: |
           tox -e pylint
 
-      - name: Run ruff
+      - name: Run ruff-check
         if: matrix.toxenv== 'py312'
         run: |
-          tox -e ruff
+          tox -e ruff-check
+
+      - name: Run ruff-format-check
+        if: matrix.toxenv== 'py312'
+        run: |
+          tox -e ruff-format-check
   Test-Snap:
     runs-on: ubuntu-20.04
     steps:
