--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-env_list = py{36,37,38,39,310,311,312},pylint,ruff
+env_list = py{36,37,38,39,310,311,312},pylint,ruff-check,ruff-format,ruff-format-check
 skipsdist = true
+isolated_build=true
 
 [testenv]
 unit_tests = {toxinidir}/tests/
@@ -22,7 +23,7 @@ deps =
     # Note that this is awkwardly installs the package
     # itself and not only [optional-dependencies.testing].
     # see: https://github.com/pypa/pip/issues/11440
-    py{36,37,38,39,310,311,312},pylint,ruff: .[testing] # Install & test dependencies
+    py{36,37,38,39,310,311,312},pylint,ruff-check,ruff-format-check,ruff-format: .[testing] # Install & test dependencies
 commands =
     py36: pip3 install toml
     py36: bash -c "pip3 install $(python extras/py36-all-requirements.py)"
@@ -34,8 +35,23 @@ commands =
     # It's fine for unit tests to not have docstrings. Also, pytest does not like static test cases.
     pylint --recursive=y -v {posargs:{[testenv]unit_tests}}  --disable=missing-function-docstring,missing-class-docstring,no-self-use
 
-[testenv:ruff]
+[testenv:ruff-check]
+# ruff is not compatible with py36 atm.
+basepython = py37,py38,py39,py310,py311,py312
 commands =
-    # ruff is not compatible with py36 atm.
-    py{37,38,39,310,311,312}: ruff check {posargs:{[testenv]module_files}}
-    py{37,38,39,310,311,312}: ruff check {posargs:{[testenv]unit_tests}}
+    ruff check {posargs:{[testenv]module_files}}
+    ruff check {posargs:{[testenv]unit_tests}}
+
+[testenv:ruff-format]
+# ruff is not compatible with py36 atm.
+basepython = py37,py38,py39,py310,py311,py312
+commands =
+    ruff format --target-version=py37 {posargs:{[testenv]module_files}}
+    ruff format --target-version=py37 {posargs:{[testenv]unit_tests}}
+
+[testenv:ruff-format-check]
+# ruff is not compatible with py36 atm.
+basepython = py37,py38,py39,py310,py311,py312
+commands =
+    ruff format --target-version=py37 --diff {posargs:{[testenv]module_files}}
+    ruff format --target-version=py37 --diff {posargs:{[testenv]unit_tests}}
